methods.slug.SlugTracking.scala.error
Erreur de compilation :
SlugTracking:13: error: type mismatch;
 found   : Unit
 required: Boolean
  avance()
        ^SlugTracking:20: error: type mismatch;
 found   : Unit
 required: Boolean
    avance()
          ^SlugTracking:26: error: type mismatch;
 found   : Unit
 required: Boolean
    avance()
          ^